--- a/src/scss/components/contact.scss
+++ b/src/scss/components/contact.scss
@@ -41,7 +41,7 @@
 			position: absolute;
 			width: 100px;
 			right: 10px;
-			top: -20px;
+			top: -40px;
 		}
 	}
 }
