--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -7,15 +7,13 @@ header {
 
 		#menu-button--close {
 			display: none;
-			border: none;
 			border-radius: 100px;
-			padding: 4px 10px;
+			padding: 4px 8px;
+			margin: 0 0 0 auto;
 		}
 	}
 
 	&.header__smallviewport {
-		background-color: #ffffff;
-
 		.container {
 			flex-direction: column;
 			align-items: flex-start;
