--- a/src/scss/layouts/index.scss
+++ b/src/scss/layouts/index.scss
@@ -2,7 +2,6 @@
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
 	gap: 3rem;
-	margin-top: 3rem;
 
 	img {
 		transition: rotate;
@@ -12,10 +11,10 @@
 
 	//headline
 	> div:first-child {
-		padding: 3rem 0 4rem 0;
+		padding: 0 0 2rem 0;
 
 		h1 {
-			font-size: 2rem;
+			font-size: 3rem;
 			margin: 0;
 		}
 	}
@@ -63,6 +62,14 @@
 }
 
 @media only screen and (min-width: 768px) {
+	body #intro {
+		margin-top: 3rem;
+	}
+
+	body #intro > div:first-child {
+		padding: 3rem 0 4rem 0;
+	}
+
 	body #intro > div:first-child h1 {
 		font-size: 3.25rem;
 	}
