--- a/src/scss/styles/semantic-tokens-light.scss
+++ b/src/scss/styles/semantic-tokens-light.scss
@@ -10,7 +10,7 @@
 	--text-color-link-active: #00596b;
 	--text-color-link-visited: #b00162;
 
-	--primary-action: var(--color-blue-90);
+	--primary-action: var(--color-accent-2);
 	--primary-action-active: var(--color-blue-70);
 
 	--color-accent-1: #ffd9b4;
